public/css/main.css
@import 'reset.css';

html {
	height: 100%;
	background: #7F7F7F; }

body {
	overflow-x: hidden;
	font-family: 'Helvetica Neue', Helvetica, sans-serif;
	height: 100%;
	text-shadow: #FFFFFF 0 1px 0;
	background: -webkit-gradient(linear, left top, left bottom, from(#E5E5E5), to(#7F7F7F)); }

#body {
	position: absolute;
	width: 100%; }

#console { }

#body li {
	opacity: .5;
	font-weight: 200;
	font-size: 200%;
	padding: 5px 40px 5px 320px;
	padding-right: 200px; }

#checkin li {
	padding-right: 40px; }

#body li p {
	color: rgba(0, 0, 0, .5);
	display: none; }

#body li mark {
	color: rgba(0, 0, 0, 1);
	background: none; }

#body li:first-child {
	padding-top: 85px; }

#checkin li:first-child {
	opacity: 1;
	margin-bottom: 20px;
	padding: 85px 40px 40px 320px;
	border-bottom: 1px solid rgba(0, 0, 0, .25);
	background: -webkit-gradient(linear, left top, left bottom, from(rgba(100%, 100%, 100%, .75)), to(rgba(100%, 100%, 100%, .25))); }
	
#checkin li:first-child strong {
	font-size: 200%;
	font-weight: 200; }

#checkin li:first-child p {
	display: block; }

#overlay {
	position: fixed;
	width: 100%;
	height: 100%;
	background: rgba(0, 0, 0, .8);
	z-index: 1500; }

.module {
	position: absolute;
	width: 400px;
	margin: 0 auto;
	z-index: 2000;
	text-shadow: #FFFFFF 0 1px 0; }

.form {
	background: #F9F9F9;
	padding: 20px 30px 10px;
	margin-bottom: 1px;
	border-radius: 0 0 10px 10px;
	-webkit-box-shadow: 0 10px 5px rgba(0, 0, 0, .5); }
	
.module hgroup {
	padding-bottom: 20px;
	margin-bottom: 20px;
	border-bottom: 1px solid rgba(0, 0, 0, .2); }

.module hgroup h2 {
	color: rgba(0, 0, 0, .5);
	font-weight: 200;
	font-size: 24px; }

.module hgroup h2 span {
	font-size: 85%;
	padding-left: 5px;
	color: rgba(0, 0, 0, .2); }

.close {
	float: right;
	color: rgba(0, 0, 0, .2);
	background: rgba(0, 0, 0, .05);
	padding: 0 10px;
	border-radius: 5px;
	line-height: 26px;
	height: 32px;
	font-weight: bold;
	text-decoration: none;
	font-size: 24px; }

.close:hover {
	color: white;
	background: rgba(0, 0, 0, .1); }

button {
	font-size: 16px;
    padding: .5em 1em;
    background-color: rgba(0, 0, 0, .1);
    border: 1px solid rgba(0, 0, 0, .2);
    border-radius: 5px;
    text-shadow: rgba(0, 0, 0, .1) 0 -1px 0;
    background: -webkit-gradient(linear, 0 0, 0 100%, from(#FFFFFF), to(#E5E5E5)); }

button:hover {
    border-color: rgba(50, 120, 224, .5);
    background: -webkit-gradient(linear, 0 0, 0 100%, from(#FFFFFF), to(#eaf1fc)); }

button:active {
    background: -webkit-gradient(linear, 0 0, 0 100%, from(#eaf1fc), to(#FFFFFF)); }

input {
	display: block;
	font-size: 20px;
	width: 318px;
    padding: 10px;
    border: 1px solid rgba(0, 0, 0, .2);
    border-radius: 5px; }

input.disabled {
	opacity: .25; }

label {
	font-size: 12px;
	color: rgba(0, 0, 0, .4);
	text-transform: uppercase; }

form p {
	clear: both;
	padding: 0 0 10px; }

.grid-2 p {
	clear: none;
	float: right; }

.grid-2 p:first-child {
	float: left; }

.grid-2 p input {
	width: 140px; }



.auto {
	height: 100%;
	right: 0;
	z-index: 150;
	padding: 0 10px; }

.auto ul {
	background: #FFFFFF;
	-webkit-box-shadow: 0 5px 5px rgba(0, 0, 0, .5); }

.auto span {
	font-size: 18px;
	color: #000;
	padding-right: 5px; }

.auto li {
	font-size: 14px;
	line-height: 18px;
	color: rgba(0, 0, 0, .5);
	padding: 10px 30px;
	background: rgba(0, 0, 0, .2); 
	border-bottom: 1px solid rgba(0, 0, 0, .1); }

.auto li.selected {
	background: rgba(0, 0, 0, .6);
	-webkit-box-shadow: inset 0 5px 10px rgba(0, 0, 0, .5); }

.auto li.selected, .auto li.selected span {
	color: #FFFFFF;
	text-shadow: #000000 0 1px 0; }



#feedback {
	position: absolute;
	bottom: 0;
	max-width: 600px;
	z-index: 3000;
	text-shadow: #FFFFFF 0 1px 0;
	background: #F9F9F9;
	padding: 20px 30px 20px;
	border-radius: 10px 10px 0 0;
	-webkit-box-shadow: 0 10px 5px rgba(0, 0, 0, .5); }


h1 {
	font-size: 24px;
	font-weight: 200;
	margin: 0 0 20px; }

h2 {
	color: rgba(0, 0, 0, .5);
	font-weight: 200;
	font-size: 24px; }

h2 span {
	font-size: 115%;
	font-weight: 400;
	color: rgba(0, 0, 0, 1); }


h3, #menu li {
	font-weight: bold;
	font-size: 14px;
	margin: 10px 5px;
	padding: 5px 10px;
	color: rgba(0, 0, 0, .4);
	text-transform: uppercase;
	text-shadow: #FFFFFF 0 1px 0; }

nav {
	background: -webkit-gradient(linear, left top, left bottom, from(#F5F5F5), to(#FFFFFF));
	border-bottom: 1px solid rgba(0, 0, 0, .25);
	border-radius: 0 0 0 10px;
	-webkit-box-shadow: 0 0 10px rgba(0, 0, 0, .25); }
	

#menu {
	width: 100%;
	z-index: 200;
	position: fixed; }

#menu nav {
	margin-left: 310px;
	border-radius: 0 0 0 10px; }

#menu li {
	float: left; }
	
#menu li:last-child {
	float: right; }

#menu li.selected {
	opacity: 1;
	background: rgba(200, 0, 0, .2);
	border-radius: 15px; }


.miss {
	float: right;
	opacity: 1;
	padding: 5px 10px;
	background: rgba(200, 0, 0, .2);
	border-radius: 15px; }


nav.menu {
	z-index: 100;
	position: fixed;
	width: 280px;
	border-radius: 0 0 10px; }

nav.menu ul {
	padding: 0 0 10px; }

nav.menu li {
	font-size: 125%;
	font-weight: 200;
	padding: 5px 20px; }




#checkin-options {
	top: 45px;
	left: 320px;
	width: 180px;
	border-radius: 0 0 10px 10px; }

#checkin-options li, #down-downs li {
	opacity: .5; }

#checkin-options li.selected, #down-downs li.selected {
	opacity: 1;
	text-decoration: underline; }
		
#down-downs {
	min-width: 200px;
	color: rgba(0, 0, 0, 1);
	width: auto;
	right: 0;
	bottom: 0;
	border-radius: 10px 0 0;
	border-width: 0; }

#down-downs li {
	font-weight: 200;
	font-size: 20px;
	padding: 10px 20px; }

#down-downs li span {
	font-weight: bold; }

#down-downs li:first-childx {
	background: -webkit-gradient(linear, 0 0, 0 100%, from(rgba(0, 0, 0, .2)), to(rgba(0, 0, 0, .4)));
	border: solid rgba(0, 0, 0, .5);
	border-width: 1px 0;
	color: #FFFFFF;
	text-shadow: #000000 0 1px 0; }


#missing {
	text-align: right; }
	
#missingx {
	position: absolute;
	text-align: right; }

#missingx h3 {
	position: fixed; }
	
#missing li {
	font-size: 150%;
	font-weight: 200;
	padding: 5px 20px; }

#missing.empty {
	background: none;
	border: none;
	-webkit-box-shadow: none; }

#missing.empty h3 span {
	padding: 5px 10px;
	background: rgba(200, 0, 0, .2);
	border-radius: 15px;
}

#missing.empty ul {
	display: none; }


.clear {
	clear: both; }
	
.hide {
	display: none; }

